Change index paths to monkestation

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <script>
 // Insert URL template here
-window.repository="yogstation13/yogstation"
-window.demo_url_template="https://yogstation.net/rounds/{roundid}/replay";
+window.repository="monkestation/MonkeStation"
+window.demo_url_template="https://monkestation.com/rounds/{roundid}/replay";
 </script>
 <link rel="stylesheet" href="out/out.css">
 <script type="text/javascript" src="out/out.js"></script>
